# robotics-agents-and-reasoning-labs

./: README.md
Week10/: week10_5151332.docx
Week11/: RL-maze-code-link.txt  RL-maze.ipynb  Week11_s5151332.docx  grid2.txt
Week11/.ipynb_checkpoints/: RL-maze-checkpoint.ipynb
Week2/code/: CMakeLists.txt  listener  package.xml  publisher
Week2/code/src/: dynamic_listener.cpp  listener.cpp  publisher.cpp
Week2/report/: report.aux  report.fls  report.tex
Week3/code/: CMakeLists.txt  package.xml
Week3/code/src/: services.cpp
Week3/code/srv/: distance_to_target.srv
Week3/report/: report.aux  report.fdb_latexmk  report.tex
Week4/: CMakeLists.txt  package.xml
Week4/src/: services.cpp
Week4/srv/: st.srv
Week8/: week8.docx
Week9/: Lab9.docx  auv_domain.csp  auv_hgn.csp  auv_htn.csp  idk.pcsp
exercises w1-w5/report/: biblio.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.tex
exercises w1-w5/report/img/: gait.drawio
week7/: report.fdb_latexmk  report.fls  report.tex
